Render slot buffer gets deleted in compositor when input is an image #38245

Closed
opened 2014-01-16 12:55:06 +01:00 by Michael P. · 11 comments

System Information
Windows 7 64bit
NVIDIA GeForce GTX 760

Blender Version
Broken: ( 2.69.0 r60995)

Short description of error
Render slot buffer gets deleted in compositor when input is a image.

Exact steps for others to reproduce the error
Please open the attached blend file (Both test images are packed into the blend file.).

compositor-rendering-slots-deleted.blend

  1. go to frame 5 and render
  2. change the render slot to 2
  3. go to frame 20 and render
  4. now switch between slot 1 and slot 2 (shortcut J)

The rendering for frame 5 and 20 is the same.

**System Information** Windows 7 64bit NVIDIA GeForce GTX 760 **Blender Version** Broken: ( 2.69.0 r60995) **Short description of error** Render slot buffer gets deleted in compositor when input is a image. **Exact steps for others to reproduce the error** Please open the attached blend file (Both test images are packed into the blend file.). [compositor-rendering-slots-deleted.blend](https://archive.blender.org/developer/F69343/compositor-rendering-slots-deleted.blend) 1. go to frame 5 and render 2. change the render slot to 2 3. go to frame 20 and render 4. now switch between slot 1 and slot 2 (shortcut J) The rendering for frame 5 and 20 is the same.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha

Added subscriber: @brecht

Added subscriber: @brecht

Confirmed, basically compositing doesn't work with render slots at all, I don't think render slots were implemented with that use case in mind.

Confirmed, basically compositing doesn't work with render slots at all, I don't think render slots were implemented with that use case in mind.

Added subscriber: @brad_h

Added subscriber: @brad_h
Sergey Sharybin self-assigned this 2014-02-17 08:59:14 +01:00

Will have a look.

Will have a look.

This issue was referenced by blender/blender-addons-contrib@1b9feb04ab

This issue was referenced by blender/blender-addons-contrib@1b9feb04ab87e73482a6491569b4518aa6a54c1b

This issue was referenced by 1b9feb04ab

This issue was referenced by 1b9feb04ab87e73482a6491569b4518aa6a54c1b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1b9feb04ab.

Closed by commit 1b9feb04ab.

This issue was referenced by 5b90a6e188

This issue was referenced by 5b90a6e188f78ee4544b528c55fb0f2a8f6e9fd6
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38245
No description provided.