Fix T38245: Render slot buffer gets deleted in compositor when input is an image

This was more like a TODO than a bug, but wasn't difficult to support.

Need to backup image slots before doing re-compo in nodes editor.

If something breaks, lease poke me!